IT Autoflight Changelog
Copyright (c) 2024 Josh Davidson (Octal450)
I will note if new ITAF tuning or config is required. Simply check the "ITAF CONFIG.txt" file.

---------------------------------------------------------------------------------------------------------------------

V4.1.0:
[Logic]
* Fixed: Various logic controller bugs
* Changed: Improved autoland flare law

V4.0.9:
[Control Loop]
* Added: Basic pitch hold mode
* Added: Improved pitch flight director computation
* Added: Better adjustment for takeoff flight director pitch bar (New config required)
* Added: Configurable auto elevator trim bounds (New config required)
* Fixed: Minor issue with roll hold mode
* Changed: Improved pitch control law for high altitude

[Logic]
* Added: Ability to allow modes to be selected on the ground (New config required)
* Added: Third autopilot option
* Added: Basic pitch hold mode
* Added: Throttle mode annunciation property mode/thr
* Added: Ability to adjust maximum target knots and mach (New config required)
* Added: Ability to define angle of attack where AP trips off (New config required)
* Added: Handle FGFS's default autopilot disconnect binding
* Fixed: Ensure route manager errors do not block ITAF loop
* Changed: Speed mode text property has changed from mode/thr to mode/spd
* Changed: G/S arm changed from apprArm gsArm and gs-arm.

[GUI]
* Fixed: FPA not syncing when inactive
* Fixed: Floating point error with FPA and Mach

---------------------------------------------------------------------------------------------------------------------

V4.0.8:
[Control Loop]
* Added: Internal control drivers for overridable yoke (New config required)
* Added: New speed on pitch control loop without integrator
* Added: Ability to not drive throttle directly with autothrottle
* Added: CWS interrupt ability
* Added: More flexible bank limit system with overrides (New config required)
* Added: Ability to adjust FLCH acceleration/deceleration rate (New config required)