@@ -741,7 +741,33 @@
 	</filter>
 	
 	<filter>
-		<name>Nav1 Course Error Deg</name>
+		<name>Nav Deflection</name>
+		<type>gain</type>
+		<gain>1.0</gain>
+		<input>
+			<condition>
+				<equals>
+					<property>/it-autoflight/input/radio-sel</property>
+					<value>1</value>
+				</equals>
+			</condition>
+			<property>/instrumentation/nav[1]/heading-needle-deflection-norm</property>
+		</input>
+		<input>
+			<condition>
+				<equals>
+					<property>/it-autoflight/input/radio-sel</property>
+					<value>2</value>
+				</equals>
+			</condition>
+			<property>/instrumentation/nav[2]/heading-needle-deflection-norm</property>
+		</input>
+		<input>/instrumentation/nav[0]/heading-needle-deflection-norm</input>
+		<output>/it-autoflight/internal/nav-deflection-norm</output>
+	</filter>
+	
+	<filter>
+		<name>Nav1 Course Track Error Deg</name>
 		<type>gain</type>
 		<gain>1.0</gain>
 		<input>
@@ -759,7 +785,7 @@
 	</filter>
 	
 	<filter>
-		<name>Nav2 Course Error Deg</name>
+		<name>Nav2 Course Track Error Deg</name>
 		<type>gain</type>
 		<gain>1.0</gain>
 		<input>
@@ -777,7 +803,7 @@
 	</filter>
 	
 	<filter>
-		<name>Nav3 Course Error Deg</name>
+		<name>Nav3 Course Track Error Deg</name>
 		<type>gain</type>
 		<gain>1.0</gain>
 		<input>
@@ -788,6 +814,50 @@
 			</offset>
 		</input>
 		<output>/it-autoflight/internal/nav3-course-track-error-deg</output>
+		<period>
+			<min>-180</min>
+			<max>180</max>
+		</period>
+	</filter>
+	
+	<filter>
+		<name>Nav Course Heading Error Deg</name>
+		<type>gain</type>
+		<gain>1.0</gain>
+		<input>
+			<condition>
+				<equals>
+					<property>/it-autoflight/input/radio-sel</property>
+					<value>1</value>
+				</equals>
+			</condition>
+			<property>/instrumentation/nav[1]/radials/selected-deg</property>
+			<offset>
+				<property>/orientation/heading-magnetic-deg</property>
+				<scale>-1.0</scale>
+			</offset>
+		</input>
+		<input>
+			<condition>
+				<equals>
+					<property>/it-autoflight/input/radio-sel</property>
+					<value>2</value>
+				</equals>
+			</condition>
+			<property>/instrumentation/nav[2]/radials/selected-deg</property>
+			<offset>
+				<property>/orientation/heading-magnetic-deg</property>
+				<scale>-1.0</scale>
+			</offset>
+		</input>
+		<input>
+			<property>/instrumentation/nav[0]/radials/selected-deg</property>
+			<offset>
+				<property>/orientation/heading-magnetic-deg</property>
+				<scale>-1.0</scale>
+			</offset>
+		</input>
+		<output>/it-autoflight/internal/nav-course-heading-error-deg</output>
 		<period>
 			<min>-180</min>
 			<max>180</max>
@@ -1089,17 +1159,90 @@
 		<max>/it-autoflight/internal/bank-limit</max>
 	</filter>
 	
+	<logic>
+		<input>
+			<and>
+				<property>/it-autoflight/output/ap-on</property>
+				<equals>
+					<property>/it-autoflight/output/lat</property>
+					<value>4</value>
+				</equals>
+				<equals>
+					<property>/gear/gear[1]/wow</property>
+					<value>0</value>
+				</equals>
+				<equals>
+					<property>/gear/gear[2]/wow</property>
+					<value>0</value>
+				</equals>
+			</and>
+		</input>
+		<output>/it-autoflight/internal/align-roll-mode</output>
+	</logic>
+	
+	<pid-controller>
+		<name>IT-CONTROLLER: Align Roll</name>
+		<type>gain</type>
+		<enable>
+			<condition>
+				<equals>
+					<property>/it-autoflight/internal/align-roll-mode</property>
+					<value>1</value>
+				</equals>
+			</condition>
+		</enable>
+		<input>/it-autoflight/internal/nav-heading-error-deg</input>
+		<reference>0</reference>
+		<output>/it-autoflight/internal/target-roll-deg</output>
+		<config>
+			<Kp>
+				<expression>
+					<product>
+						<property>/it-autoflight/config/cmd/roll-kp</property>
+						<value>-1.0</value>
+					</product>
+				</expression>
+			</Kp>
+			<Ti>5.0</Ti>
+			<Td>0.001</Td>
+			<u_min>
+				<expression>
+					<table>
+						<property>/position/gear-agl-ft</property>
+						<entry><ind>50</ind><dep>-10</dep></entry>
+						<entry><ind> 5</ind><dep>  0</dep></entry>
+					</table>
+				</expression>
+			</u_min>
+			<u_max>
+				<expression>
+					<table>
+						<property>/position/gear-agl-ft</property>
+						<entry><ind>50</ind><dep>10</dep></entry>
+						<entry><ind> 5</ind><dep> 0</dep></entry>
+					</table>
+				</expression>
+			</u_max>
+		</config>
+	</pid-controller>
+	
 	<filter>
-		<name>IT-CONTROLLER: Align/Rollout/Takeoff</name>
+		<name>IT-CONTROLLER: Rollout/Takeoff</name>
 		<type>gain</type>
 		<gain>1.0</gain>
 		<enable>
 			<condition>
 				<or>
-					<equals>
-						<property>/it-autoflight/output/lat</property>
-						<value>4</value>
-					</equals>
+					<and>
+						<equals>
+							<property>/it-autoflight/output/lat</property>
+							<value>4</value>
+						</equals>
+						<equals>
+							<property>/it-autoflight/internal/align-roll-mode</property>
+							<value>0</value>
+						</equals>
+					</and>
 					<and>
 						<equals>
 							<property>/it-autoflight/output/lat</property>
@@ -1267,8 +1410,8 @@
 		<output>/it-autoflight/internal/aileron-cmd</output>
 		<config>
 			<Kp>/it-autoflight/config/roll/kp</Kp>
-			<Ti>/it-autoflight/config/roll/ti</Ti>
-			<Td>/it-autoflight/config/roll/td</Td>
+			<Ti>1.0</Ti>
+			<Td>0.0001</Td>
 			<u_min>-1.0</u_min>
 			<u_max>1.0</u_max>
 		</config>
@@ -1277,7 +1420,7 @@
 	<filter>
 		<name>System Command: Aileron Ground</name>
 		<type>gain</type>
-		<gain>/it-autoflight/config/rollout/roll-kp</gain>
+		<gain>/it-autoflight/config/rollout/aileron</gain>
 		<enable>
 			<condition>
 				<property>/it-autoflight/output/ap-on</property>
@@ -1875,13 +2018,22 @@
 		<reference>/it-autoflight/internal/target-fpm</reference>
 		<output>/it-autoflight/internal/target-pitch-deg</output>
 		<config>
-			<Kp>
+			<Kp> <!-- Flare Mode -->
 				<condition>
-					<not-equals>
+					<equals>
 						<property>/it-autoflight/output/vert</property>
 						<value>6</value>
-					</not-equals>
+					</equals>
 				</condition>
+				<expression>
+					<table>
+						<property>/velocities/airspeed-kt</property>
+						<entry><ind>140</ind><dep>0.0049</dep></entry>
+						<entry><ind>200</ind><dep>0.0041</dep></entry>
+					</table>
+				</expression>
+			</Kp>
+			<Kp>
 				<expression>
 					<product>
 						<table>
@@ -1896,15 +2048,6 @@
 						</table>
 					</product>
 				</expression>
-			</Kp>
-			<Kp>
-				<condition>
-					<equals>
-						<property>/it-autoflight/output/vert</property>
-						<value>6</value>
-					</equals>
-				</condition>
-				<property>/it-autoflight/config/autoland/pitch-kp</property>
 			</Kp>
 			<Ti>2.5</Ti>
 			<Td>0.0001</Td>
@@ -2107,8 +2250,8 @@
 		<output>/it-autoflight/internal/elevator-cmd</output>
 		<config>
 			<Kp>/it-autoflight/config/pitch/kp</Kp>
-			<Ti>/it-autoflight/config/pitch/ti</Ti>
-			<Td>/it-autoflight/config/pitch/td</Td>
+			<Ti>0.5</Ti>
+			<Td>0.001</Td>
 			<u_min>-1.0</u_min>
 			<u_max>1.0</u_max>
 		</config>
@@ -2327,8 +2470,147 @@
 	</filter>
 	
 	<!-- Yaw Axis -->
-	<pi-simple-controller>
-		<name>IT-CONTROLLER: Yaw VOR/LOC</name>
+	<filter>
+		<name>Align End AGL</name>
+		<type>gain</type>
+		<gain>0.4</gain>
+		<input>/it-autoflight/settings/align-ft</input>
+		<output>/it-autoflight/internal/align-end-ft</output>
+	</filter>
+	
+	<filter>
+		<name>Align AGL Blending</name>
+		<type>gain</type>
+		<gain>1.0</gain>
+		<input>
+			<expression>
+				<product>
+					<difference>
+						<property>/position/gear-agl-ft</property>
+						<property>/it-autoflight/internal/align-end-ft</property>
+					</difference>
+					<div>
+						<value>1</value>
+						<difference>
+							<property>/it-autoflight/settings/align-ft</property>
+							<property>/it-autoflight/internal/align-end-ft</property>
+						</difference>
+					</div>
+				</product>
+			</expression>
+		</input>
+		<output>/it-autoflight/internal/align-blending</output>
+		<min>0</min>
+		<max>1</max>
+	</filter>
+	
+	<filter>
+		<name>IT-CONTROLLER: Align/Rollout Yaw Rate Target</name>
+		<type>gain</type>
+		<gain>1.0</gain>
+		<input>
+			<condition>
+				<or>
+					<equals>
+						<property>/gear/gear[1]/wow</property>
+						<value>0</value>
+					</equals>
+					<equals>
+						<property>/gear/gear[2]/wow</property>
+						<value>0</value>
+					</equals>
+				</or>
+			</condition>
+			<expression>
+				<sum>
+					<product>
+						<property>/it-autoflight/internal/align-blending</property>
+						<property>/it-autoflight/internal/nav-heading-error-deg</property>
+					</product>
+					<product>
+						<table>
+							<property>/it-autoflight/internal/align-blending</property>
+							<entry><ind>0</ind><dep>1</dep></entry>
+							<entry><ind>1</ind><dep>0</dep></entry>
+						</table>
+						<property>/it-autoflight/internal/nav-course-heading-error-deg</property>
+					</product>
+				</sum>
+			</expression>
+		</input>
+		<input>
+			<expression>
+				<sum>
+					<property>/it-autoflight/internal/nav-course-heading-error-deg</property>
+					<product>
+						<property>/it-autoflight/internal/nav-deflection-norm</property>
+						<value>15</value>
+					</product>
+				</sum>
+			</expression>
+		</input>
+		<output>/it-autoflight/internal/yaw-rate</output>
+		<min>
+			<condition>
+				<and>
+					<equals>
+						<property>/gear/gear[1]/wow</property>
+						<value>0</value>
+					</equals>
+					<equals>
+						<property>/gear/gear[2]/wow</property>
+						<value>0</value>
+					</equals>
+				</and>
+			</condition>
+			<value>-5</value>
+		</min>
+		<min>-2</min>
+		<max>
+			<condition>
+				<and>
+					<equals>
+						<property>/gear/gear[1]/wow</property>
+						<value>0</value>
+					</equals>
+					<equals>
+						<property>/gear/gear[2]/wow</property>
+						<value>0</value>
+					</equals>
+				</and>
+			</condition>
+			<value>5</value>
+		</max>
+		<max>2</max>
+	</filter>
+	
+	<filter>
+		<name>IT-CONTROLLER: Align/Rollout Yaw Inactive Centering</name>
+		<type>gain</type>
+		<gain>1.0</gain>
+		<enable>
+			<condition>
+				<not>
+					<and>
+						<property>/it-autoflight/output/ap-on</property>
+						<equals>
+							<property>/it-autoflight/output/lat</property>
+							<value>4</value>
+						</equals>
+						<greater-than-equals>
+							<property>/velocities/groundspeed-kt</property>
+							<value>1</value>
+						</greater-than-equals>
+					</and>
+				</not>
+			</condition>
+		</enable>
+		<input>0</input>
+		<output>/it-autoflight/internal/rudder-cmd</output>
+	</filter>
+	
+	<pid-controller>
+		<name>IT-CONTROLLER: Align/Rollout Yaw</name>
 		<enable>
 			<condition>
 				<and>
@@ -2337,48 +2619,40 @@
 						<property>/it-autoflight/output/lat</property>
 						<value>4</value>
 					</equals>
+					<greater-than-equals>
+						<property>/velocities/groundspeed-kt</property>
+						<value>1</value>
+					</greater-than-equals>
 				</and>
 			</condition>
 		</enable>
-		<input>/it-autoflight/internal/nav-heading-error-deg</input>
-		<reference>0</reference>
+		<input>/orientation/yaw-rate-degps</input>
+		<reference>/it-autoflight/internal/yaw-rate</reference>
 		<output>/it-autoflight/internal/rudder-cmd</output>
 		<config>
 			<Kp>
-				<condition>
-					<and>
-						<equals>
-							<property>/gear/gear[1]/wow</property>
-							<value>0</value>
-						</equals>
-						<equals>
-							<property>/gear/gear[2]/wow</property>
-							<value>0</value>
-						</equals>
-					</and>
-				</condition>
-				<property>/it-autoflight/config/autoland/yaw-kp</property>
+				<expression>
+					<product>
+						<property>/it-autoflight/config/yaw/gain-factor</property>
+						<table>
+							<property>/velocities/airspeed-kt</property>
+							<entry><ind>140</ind><dep>0.27</dep></entry>
+							<entry><ind>200</ind><dep>0.21</dep></entry>
+						</table>
+						<table>
+							<property>/gear/gear[0]/wow</property>
+							<entry><ind>0</ind><dep>1.0</dep></entry>
+							<entry><ind>1</ind><dep>0.8</dep></entry>
+						</table>
+					</product>
+				</expression>
 			</Kp>
-			<Kp>
-				<condition>
-					<or>
-						<equals>
-							<property>/gear/gear[1]/wow</property>
-							<value>1</value>
-						</equals>
-						<equals>
-							<property>/gear/gear[2]/wow</property>
-							<value>1</value>
-						</equals>
-					</or>
-				</condition>
-				<property>/it-autoflight/config/rollout/yaw-kp</property>
-			</Kp>
-			<Ki>0</Ki>
+			<Ti>1.5</Ti>
+			<Td>0.001</Td>
+			<u_min>-1.0</u_min>
+			<u_max>1.0</u_max>
 		</config>
-		<min>-0.15</min>
-		<max>0.15</max>
-	</pi-simple-controller>
+	</pid-controller>
 	
 	<filter>
 		<name>System Command: Rudder Internal</name>
@@ -2387,10 +2661,6 @@
 			<condition>
 				<and>
 					<property>/it-autoflight/output/ap-on</property>
-					<not-equals>
-						<property>/it-autoflight/settings/disable-final</property>
-						<value>1</value>
-					</not-equals>
 					<equals>
 						<property>/it-autoflight/output/lat</property>
 						<value>4</value>
