@@ -5,8 +5,14 @@ I will note if new ITAF tuning or config is required. Simply check the "ITAF CON
 ---------------------------------------------------------------------------------------------------------------------
 
 V4.1.0:
+[Control Loop]
+* Added: New ALIGN control yaw for autoland (New config required)
+* Added: New ROLLOUT control law for autoland (New config required)
+* Added: Improved FLARE law for autoland
+
 [Logic]
 * Fixed: Various logic controller bugs
+* Changed: Align can no longer engage without AP
 * Changed: Improved autoland flare law
 
 V4.0.9:
